components/authentik/authentik-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  selector:
    app: authentik-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  type: ClusterIP
